k8s/des/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started
  namespace: des
  labels:
    app: getting-started
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getting-started
  template:
    metadata:
      labels:
        app: getting-started
    spec:
      containers:
        - name: getting-started
          image: host.docker.internal:5000/getting-started-des:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
kind: Service
apiVersion: v1  
metadata:
  name: getting-started
  namespace: des
spec:
  type: ClusterIP
  selector:
    app: getting-started
  ports:
  - port: 8080
    targetPort: 8080
---
