k8s/des/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: des
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /des/getting-started
        pathType: Prefix
        backend:
          service:
            name: getting-started
            port:
              number: 8080
---
